fix z-index

--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -1,5 +1,6 @@
 .slider {
   position: relative;
+  z-index: 3;
 
   padding: 85px 50px 60px 60px;
   height: 580px;
